Reverted edits by [[Special:Contributions/Nesciens|Nesciens]] ([[User talk:Nesciens|talk]]) to last revision by [[User:Pranavwright|Pranavwright]]
Levitation import of page 2433 rev 11416 (minor).

--- a/2-User/Nesciens.mediawiki
+++ b/2-User/Nesciens.mediawiki
@@ -1,7 +1,4 @@
 "Nesciens" means "ignorant" or "unknowing" in Latin, so do not expect anything sensible from me. (Nesciens might even be spelled wrong.)
 
 [[User:Nesciens|Nesciens]] 01:02, 5 March 2008 (CET)
-
-Checked editing still works.
-
-[[User:Nesciens|Nesciens]] ([[User talk:Nesciens|talk]])
+[http://cvresumewritingservices.org/ resume service]
