/* To be sorted */
Levitation import of page 2280 rev 11423.

--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -85,6 +85,7 @@ All current clients should be found here, but not every entry in this list is up
 {{ClientTableEntry|XMMS2-Scrobbler| AudioScrobbler | Ruby | in development | Submits playing data to AudioScrobbler/Last.FM }}
 {{ClientTableEntry|XMMS2 Webterface| Browser / Webclient | Ruby | in development | eRuby templated, skinnable, simple web 1.0 client}}
 {{ClientTableEntry|Xmms Weighted Shuffle| Non Interactive/Playlist | Ruby | in development | Manage a playlist as a party shuffle with complex rules  }}
+{{ClientTableEntry|PBXMMS2client| Graphical | C++ | in development | Client for control XMMS2 on PocketBook e-book readers  }}
 |}
 
 = Unknown State =
