--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -6,6 +6,7 @@ All current clients should be found here, but not every entry in this list is up
 
 {| class="wikitable"
 !                  Name         || Kind || Language || Status || Description
+{{ClientTableEntry|daixmms2skin | Graphical / Qt  | Python | in development | Simple client designed to easily manage playlists}}
 {{ClientTableEntry|Abraca       | Graphical / GTK | C | in development | Usable client with collection support }}
 {{ClientTableEntry|ccx2         | Console / ncurses | Python | development stalled (2010-03) | Customizable console client with good support for playlists and searching }}
 {{ClientTableEntry|eq           | Graphical / GTK | Python | in development | Simple equalizer frontend }}
