--- a/0-/Client:daixmms2client.mediawiki
+++ b/0-/Client:daixmms2client.mediawiki
@@ -4,7 +4,7 @@ Client
 |name=daixmms2client
 |author=[[User:WikiUsername|Dai Trying]]
 |website=[http://dsbnet.tk/pages/Xmms2_skin.php dsbnet.tk]
-|version=0.0.1-10
+|version=0.0.1-11
 |devlanguage=Python
 |ui=Qt
 |screenshots=[http://dsbnet.tk/skin_images/skin_Mlibrary.png] [http://dsbnet.tk/skin_images/skin_playlist.png] [http://dsbnet.tk/skin_images/skin_nowplaying.png] [http://dsbnet.tk/skin_images/skin_settings.png]
@@ -12,3 +12,5 @@ Client
 }}
 This client has the full media library available in one tab, the Playlists in another, the current playlist in the next, and a 15 band equalizer in the fourth. It has settings to show/hide the displayed columns/row numbers in each of the tabs accessible from the settings icon next to the progress bar.
 Please visit my homepage for some useful information on usage, it can be found here [http://www.dsbnet.tk/Ccount/click.php?id=X_skin dsbnet.tk]
+
+I have added the ability to edit id3 tag information from version 0.0.1-11, for more information please see [http://www.dsbnet.tk/Ccount/click.php?id=X_skin my website] and download the latest version, available in a tidy ESH installer for those using [http://www.q4os.org Q4OS], or as a .deb file for those using a [http://www.debian.org debian] based distribution
