Levitation import of page 3806 rev 11455.

--- a/0-/Client:daixmms2client.mediawiki
+++ b/0-/Client:daixmms2client.mediawiki
@@ -12,4 +12,4 @@ Client
 This client has the full media library available in one tab, the Playlists in another, the current playlist in the next, and a 15 band equalizer in the fourth. It has settings to show/hide the displayed columns/row numbers in each of the tabs accessible from the settings icon next to the progress bar.
 Please visit my homepage for some useful information on usage, it can be found here [https://dsbnet.tk dsbnet.tk]
 
-I have added the ability to edit id3 tag information from version 0.0.1-11, for more information please see [taken down due to hackers :(] and download the latest version, available in a tidy ESH installer for those using [http://www.q4os.org Q4OS], or as a .deb file for those using a [http://www.debian.org debian] based distribution. There is also instructions for any other linux distribution on my website if you would like to try it.
+I have added the ability to edit id3 tag information from version 0.0.1-11, for more information please see [https://dsbnet.tk dsbnet.tk] and download the latest version, available in a tidy ESH installer for those using [http://www.q4os.org Q4OS], or as a .deb file for those using a [http://www.debian.org debian] based distribution. There is also instructions for any other linux distribution on my website if you would like to try it.
