Okay, can't seem to edit... Let's try if something small works.
Levitation import of page 5 rev 13609.

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -20,7 +20,7 @@ __NOEDITSECTION__
 </div>
 
 <div class="split-half">
-<!-- i've got an idea.. let's replace this with a web 2.0 style jumble of irregularly sized tags! -->
+<!-- I've got an idea.. let's replace this with a web 2.0 style jumble of irregularly sized tags! -->
 
 === News and events ===
 <!-- placeholder for important announcements -->
